--- a/index.html
+++ b/index.html
@@ -1,382 +1,95 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <title>Trang cá nhân của tôi</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    :root {
-      --bg: #050816;
-      --bg-soft: #0b1120;
-      --bg-card: #020617;
-      --accent: #6366f1;
-      --accent-soft: #4f46e5;
-      --accent-2: #22c55e;
-      --text: #e5e7eb;
-      --text-soft: #9ca3af;
-      --border-soft: rgba(148, 163, 184, 0.3);
-      --radius-lg: 18px;
-      --shadow-soft: 0 20px 40px rgba(15, 23, 42, 0.9);
-      --blur: blur(22px);
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nguyễn Văn Danh</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Inter', sans-serif;
+            background: #0a0f1c;
+            color: #e4fafe;
+        }
+        header {
+            display: flex;
+            justify-content: space-between;
+            padding: 20px 40px;
+            border-bottom: 1px solid rgba(0,255,255,0.2);
+        }
+        nav a {
+            margin-left: 20px;
+            text-decoration: none;
+            color: #00d4ff;
+            font-weight: 500;
+        }
+        nav a:hover {
+            text-shadow: 0 0 10px #00ffee;
+        }
+        .hero {
+            padding: 120px 40px;
+            text-align: center;
+        }
+        h1 {
+            font-size: 48px;
+            margin-bottom: 20px;
+            color: #00eaff;
+            text-shadow: 0 0 12px #00eaff;
+        }
+        .desc {
+            font-size: 20px;
+            opacity: 0.8;
+            margin-bottom: 40px;
+        }
+        .btn {
+            padding: 15px 35px;
+            border: 1px solid #00eaff;
+            color: #00eaff;
+            text-decoration: none;
+            border-radius: 6px;
+            transition: 0.25s;
+        }
+        .btn:hover {
+            background: #00eaff;
+            color: #000;
+            box-shadow: 0 0 20px #00eaff;
+        }
+        footer {
+            text-align: center;
+            padding: 40px 10px;
+            opacity: 0.6;
+            font-size: 14px;
+        }
+    </style>
+</head>
 
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+<body>
 
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        sans-serif;
-      background: radial-gradient(circle at top, #1d2433 0, #020617 40%, #000 100%);
-      color: var(--text);
-      min-height: 100vh;
-      line-height: 1.6;
-      display: flex;
-      justify-content: center;
-    }
+<header>
+    <div style="font-weight: bold; color:#00eaff; font-size:22px;">
+        Nguyễn Văn Danh
+    </div>
+    <nav>
+        <a href="#">IoT</a>
+        <a href="#">Programming</a>
+        <a href="#">Game</a>
+        <a href="#">3D</a>
+        <a href="#">Blog</a>
+    </nav>
+</header>
 
-    .page {
-      width: 100%;
-      max-width: 1100px;
-      padding: 20px 16px 40px;
-    }
+<section class="hero">
+    <h1>Nguyễn Văn Danh</h1>
+    <div class="desc">Làm dự án ESP32, Website và Game</div>
+    <a href="#" class="btn">Xem dự án</a>
+</section>
 
-    /* ---------- HEADER ---------- */
-    header {
-      position: sticky;
-      top: 0;
-      z-index: 20;
-      backdrop-filter: blur(16px);
-      background: linear-gradient(
-        to bottom,
-        rgba(15, 23, 42, 0.95),
-        rgba(15, 23, 42, 0.6),
-        transparent
-      );
-      border-bottom: 1px solid rgba(148, 163, 184, 0.3);
-      margin-bottom: 16px;
-    }
+<footer>
+    © 2025 Nguyễn Văn Danh - All rights reserved.
+</footer>
 
-    .nav {
-      max-width: 1100px;
-      margin: 0 auto;
-      padding: 10px 4px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 16px;
-    }
-
-    .logo {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .logo-badge {
-      width: 34px;
-      height: 34px;
-      border-radius: 999px;
-      background: radial-gradient(circle at 30% 10%, #a855f7, #4f46e5);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: 700;
-      color: #e5e7eb;
-      box-shadow: 0 0 0 2px rgba(129, 140, 248, 0.5),
-        0 0 25px rgba(129, 140, 248, 0.65);
-      font-size: 1rem;
-    }
-
-    .logo-text {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .logo-text span:first-child {
-      font-weight: 600;
-      font-size: 0.95rem;
-    }
-
-    .logo-text span:last-child {
-      font-size: 0.78rem;
-      color: var(--text-soft);
-    }
-
-    .nav-links {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 0.88rem;
-    }
-
-    .nav-links a {
-      color: var(--text-soft);
-      text-decoration: none;
-      padding: 6px 10px;
-      border-radius: 999px;
-      border: 1px solid transparent;
-      transition: 0.25s;
-    }
-
-    .nav-links a:hover {
-      color: #e5e7eb;
-      border-color: rgba(148, 163, 184, 0.7);
-      background: rgba(15, 23, 42, 0.7);
-    }
-
-    .nav-cta {
-      padding: 7px 14px;
-      border-radius: 999px;
-      border: none;
-      background: linear-gradient(135deg, #4f46e5, #22c55e);
-      color: #f9fafb;
-      font-size: 0.85rem;
-      font-weight: 600;
-      cursor: pointer;
-      box-shadow: 0 12px 25px rgba(79, 70, 229, 0.6);
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      transition: 0.25s;
-      white-space: nowrap;
-    }
-
-    .nav-cta:hover {
-      transform: translateY(-1px) scale(1.02);
-      box-shadow: 0 18px 40px rgba(79, 70, 229, 0.8);
-    }
-
-    .nav-cta span {
-      font-size: 1rem;
-    }
-
-    /* ---------- LAYOUT ---------- */
-    main {
-      display: grid;
-      grid-template-columns: minmax(0, 1.7fr) minmax(0, 1.3fr);
-      gap: 18px;
-    }
-
-    @media (max-width: 820px) {
-      main {
-        grid-template-columns: 1fr;
-      }
-    }
-
-    /* ---------- HERO / PROFILE ---------- */
-    .card {
-      border-radius: var(--radius-lg);
-      background: radial-gradient(
-          circle at top left,
-          rgba(79, 70, 229, 0.15),
-          transparent 55%
-        ),
-        radial-gradient(
-          circle at bottom right,
-          rgba(16, 185, 129, 0.12),
-          transparent 55%
-        ),
-        rgba(15, 23, 42, 0.97);
-      border: 1px solid var(--border-soft);
-      box-shadow: var(--shadow-soft);
-      padding: 18px 18px 20px;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .card::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: radial-gradient(
-        circle at top,
-        rgba(37, 99, 235, 0.18),
-        transparent 55%
-      );
-      opacity: 0.55;
-      mix-blend-mode: screen;
-      pointer-events: none;
-    }
-
-    .card-inner {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      gap: 18px;
-      z-index: 1;
-    }
-
-    .pill-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      font-size: 0.75rem;
-    }
-
-    .pill {
-      padding: 4px 10px;
-      border-radius: 999px;
-      border: 1px solid rgba(148, 163, 184, 0.6);
-      background: rgba(15, 23, 42, 0.8);
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      color: var(--text-soft);
-      backdrop-filter: var(--blur);
-    }
-
-    .pill-dot {
-      width: 7px;
-      height: 7px;
-      border-radius: 999px;
-      background: #22c55e;
-      box-shadow: 0 0 8px rgba(34, 197, 94, 0.9);
-    }
-
-    .pill-ghost {
-      background: rgba(15, 23, 42, 0.5);
-    }
-
-    .hero-main {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 16px;
-    }
-
-    .hero-text {
-      flex: 1.3;
-      min-width: 230px;
-    }
-
-    .hero-greeting {
-      font-size: 0.9rem;
-      color: var(--accent-2);
-      font-weight: 500;
-      margin-bottom: 4px;
-    }
-
-    .hero-name {
-      font-size: clamp(1.8rem, 2.4vw + 1rem, 2.5rem);
-      font-weight: 700;
-      letter-spacing: 0.03em;
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .hero-name span.highlight {
-      background: linear-gradient(135deg, #4f46e5, #22c55e);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-
-    .hero-subtitle {
-      font-size: 0.92rem;
-      color: var(--text-soft);
-      margin-top: 6px;
-      max-width: 370px;
-    }
-
-    .hero-actions {
-      margin-top: 12px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      align-items: center;
-    }
-
-    .btn-primary,
-    .btn-ghost {
-      border-radius: 999px;
-      padding: 8px 18px;
-      font-size: 0.85rem;
-      border: 1px solid transparent;
-      cursor: pointer;
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      transition: 0.25s;
-      text-decoration: none;
-    }
-
-    .btn-primary {
-      background: linear-gradient(135deg, #4f46e5, #22c55e);
-      color: #f9fafb;
-      box-shadow: 0 15px 30px rgba(79, 70, 229, 0.7);
-    }
-
-    .btn-primary:hover {
-      transform: translateY(-1px) scale(1.02);
-      box-shadow: 0 20px 40px rgba(79, 70, 229, 0.9);
-    }
-
-    .btn-ghost {
-      background: rgba(15, 23, 42, 0.7);
-      border-color: rgba(148, 163, 184, 0.6);
-      color: var(--text-soft);
-    }
-
-    .btn-ghost:hover {
-      background: rgba(15, 23, 42, 0.95);
-      color: #e5e7eb;
-    }
-
-    .btn-primary span.icon,
-    .btn-ghost span.icon {
-      font-size: 1.1rem;
-    }
-
-    .hero-meta {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 16px;
-      margin-top: 10px;
-      font-size: 0.8rem;
-      color: var(--text-soft);
-    }
-
-    .hero-meta-group {
-      display: flex;
-      flex-direction: column;
-      gap: 3px;
-    }
-
-    .hero-meta-label {
-      text-transform: uppercase;
-      letter-spacing: 0.08em;
-      font-size: 0.7rem;
-      color: #64748b;
-    }
-
-    .hero-meta-value {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-
-    .hero-meta-value span.dot {
-      width: 6px;
-      height: 6px;
-      border-radius: 999px;
-      background: rgba(148, 163, 184, 0.8);
-    }
-
-    .hero-avatar-wrapper {
-      flex: 1;
-      min-width: 200px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .hero-avatar {
-      position: relative;
-      width: 210px;
-      height: 210px;
+</body>
+</html>
       border-radius: 999px;
       background: radial-gradient(circle at 20% 0, #a855f7, #4f46e5);
       padding: 3px;
