--- a/index.html
+++ b/index.html
@@ -1,92 +1,18 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nguyễn Văn Danh</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Inter', sans-serif;
-            background: #0a0f1c;
-            color: #e4fafe;
-        }
-        header {
-            display: flex;
-            justify-content: space-between;
-            padding: 20px 40px;
-            border-bottom: 1px solid rgba(0,255,255,0.2);
-        }
-        nav a {
-            margin-left: 20px;
-            text-decoration: none;
-            color: #00d4ff;
-            font-weight: 500;
-        }
-        nav a:hover {
-            text-shadow: 0 0 10px #00ffee;
-        }
-        .hero {
-            padding: 120px 40px;
-            text-align: center;
-        }
-        h1 {
-            font-size: 48px;
-            margin-bottom: 20px;
-            color: #00eaff;
-            text-shadow: 0 0 12px #00eaff;
-        }
-        .desc {
-            font-size: 20px;
-            opacity: 0.8;
-            margin-bottom: 40px;
-        }
-        .btn {
-            padding: 15px 35px;
-            border: 1px solid #00eaff;
-            color: #00eaff;
-            text-decoration: none;
-            border-radius: 6px;
-            transition: 0.25s;
-        }
-        .btn:hover {
-            background: #00eaff;
-            color: #000;
-            box-shadow: 0 0 20px #00eaff;
-        }
-        footer {
-            text-align: center;
-            padding: 40px 10px;
-            opacity: 0.6;
-            font-size: 14px;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>Đăng nhập</title>
 </head>
-
 <body>
+<h2>Đăng nhập</h2>
 
-<header>
-    <div style="font-weight: bold; color:#00eaff; font-size:22px;">
-        Nguyễn Văn Danh
-    </div>
-    <nav>
-        <a href="#">IoT</a>
-        <a href="#">Programming</a>
-        <a href="#">Game</a>
-        <a href="#">3D</a>
-        <a href="#">Blog</a>
-    </nav>
-</header>
+<form action="login.php" method="POST">
+    <input type="text" name="username" placeholder="Tên đăng nhập" required><br><br>
+    <input type="password" name="password" placeholder="Mật khẩu" required><br><br>
+    <button type="submit">Đăng nhập</button>
+</form>
 
-<section class="hero">
-    <h1>Nguyễn Văn Danh</h1>
-    <div class="desc">Làm dự án ESP32, Website và Game</div>
-    <a href="#" class="btn">Xem dự án</a>
-</section>
-
-<footer>
-    © 2025 Nguyễn Văn Danh - All rights reserved.
-</footer>
-
+<p>Chưa có tài khoản? <a href="register.html">Đăng ký</a></p>
 </body>
 </html>
