--- a/register.html
+++ b/register.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+<meta charset="UTF-8">
+<title>Đăng ký</title>
+</head>
+<body>
+<h2>Đăng ký</h2>
+
+<form action="register.php" method="POST">
+    <input type="text" name="username" placeholder="Tên đăng nhập" required><br><br>
+    <input type="password" name="password" placeholder="Mật khẩu" required><br><br>
+    <button type="submit">Đăng ký</button>
+</form>
+
+<a href="index.html">Quay lại đăng nhập</a>
+</body>
+</html>
 
